<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayoutInformacoesProduto"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <TextView
                android:id="@+id/textViewTituloCodigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/titulo_codigo_produto"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewCodigoProduto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textViewTituloNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/titulo_nome_produto"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewNomeProduto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textViewTituloEstoque"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/titulo_quantidade_estoque_produto"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewQuantidadeEstoqueProduto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTituloDescricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/titulo_descricao_produto"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewDescricaoProduto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>